song page fix: transpose button, overflow-X

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -26,7 +26,6 @@ main,nav,header,footer {
         margin: 5px 0;
         box-sizing: border-box;
         max-width: 100%;
-        overflow-x: hidden;
 }
 
 pre {
