--- a/assets/css/songpage.css
+++ b/assets/css/songpage.css
@@ -40,7 +40,7 @@ H1 {
 pre {
 	max-width: 100%;
 	overflow-x: auto;
-	white-space: pre-wrap;
+	white-space: pre;
 	word-wrap: break-word;
 	box-sizing: border-box;
 }
@@ -90,6 +90,9 @@ pre {
 .button-viewtype:hover {
 	cursor: pointer;
 }
+#transposer {
+	display:none;
+}
 #transposer:hover {
 	background-color: #fefeee;
 }
@@ -111,7 +114,7 @@ pre {
 	top: -.28em;
 	visibility: hidden;
 }
-.txt {
+.ch, .viewtype-side .txt {
 	white-space: pre;
 }
 .txt, .ch, .strss {
